--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ members = [
 [dependencies]
 iced_core = { git = "https://github.com/iced-rs/iced", rev = "c15f1b5f6575792cc89bb5fba2e613428397e46a" }
 iced_style = { git = "https://github.com/iced-rs/iced", rev = "c15f1b5f6575792cc89bb5fba2e613428397e46a" }
-iced_widget = { git = "https://github.com/iced-rs/iced", rev = "c15f1b5f6575792cc89bb5fba2e613428397e46a" }
+iced_widget = { git = "https://github.com/iced-rs/iced", rev = "c15f1b5f6575792cc89bb5fba2e613428397e46a", features = ["lazy"] }
